--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-
 :root {
     --lightGrey: #f2f2f2;
     --hardGrey: #d9d9d9;
@@ -40,8 +39,9 @@ h3, p {
     font-size:16px;
 }
 
-
-@media screen and (min-width: 768px) {
+main {
+        width:100%;
+    }
 header {
     display:flex;
     justify-content:space-between;
@@ -75,11 +75,76 @@ header {
 
 }
 
+@media screen and (max-width: 768px)
+{
+#hero {
+    width:90%;
+    margin:auto;
+}
+header {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
+    margin-bottom:50px;
+}
+
+#logo {
+    display: flex;
+    justify-content: center;
+}
+nav {
+    height:50px;
+    width:100%;
+}
+
+#menu {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:0;
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+
+}
+
+.liste-menu {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-basis:50%;
+    width:50%;
+    margin:0;
+    text-align: center;
+    padding-bottom:15px;
+    border-bottom:3px solid var(--hardGrey);
+    border-top:2px var(--hardGrey) transparent;
+
+}
+
+.liste-menu:hover {
+    color:var(--hardBlue);
+    border-bottom:3px solid var(--hardBlue);
+
+}
+
+.liste-menu a:hover {
+    border:none;
+}
+
+}
+
 /* FILTRES */
 
 
 .recherche {
     display:flex;
+    max-width: 35%;
+    min-width:400px;
 }
 
 .button-r {
@@ -102,7 +167,7 @@ header {
     height:50px;
     border:0.5px solid var(--lightGrey);
     padding-left:10px;
-    width:230px;
+    width:100%;
     font-weight:700;
 }
 
@@ -116,9 +181,6 @@ header {
     border-radius:10px 0 0 10px;
 }
 
-.flex {
-    display:flex;
-}
 
 .search {
     display:flex;
@@ -169,6 +231,10 @@ header {
     padding:10px;
 }
 
+.fa-search {
+    display:none;
+}
+
 input[type="checkbox"] {
         display: none;
       }
@@ -197,9 +263,57 @@ input[type="checkbox"] {
     font-weight: 700;
 }
 
+@media screen and (max-width: 768px)
+{
+
+.fa-search {
+    display:inline;
+    color:white;
+}
+
+button span {
+    display:none;
+}
+
+.recherche {
+    max-width: 40%;
+    min-width:95%;
+    position:relative;
+
+}
+
+.button-r {
+    border-radius: 10px;
+    width:50px;
+    height: 50px;
+    position:absolute;
+    right:-10px;
+    text-align: center;
+    padding:0;
+
+}
+.search {
+    flex-wrap: wrap;
+    gap:5px;
+    height:100%;
+    margin-top:20px;
+}
+.titre-search {
+    flex-basis:100%;
+    margin:0;
+    }
+.titre-search h3 {
+    font-size:22px;
+    font-weight:700;
+}
+
+.legend-search {
+    margin:15px 0;
+}
+}
+
+
 /* MAIN */
-
-
 
 #centrale {
     display:flex;
@@ -208,7 +322,15 @@ input[type="checkbox"] {
     margin-top:35px;
 }
 
-
+@media screen and (max-width: 768px)
+{
+    #centrale {
+        display:flex;
+        flex-direction: column-reverse;
+        margin-top:20px;
+        gap:0;
+}
+}
 /* HEBERGEMENT A MARSEILLE */
 
 #heb-marseille {
@@ -299,6 +421,36 @@ input[type="checkbox"] {
     color:var(--hardGrey);
 }
 
+@media screen and (max-width: 768px)
+{
+
+    
+#heb-marseille {
+    width:100%;
+    margin:0;
+    flex-basis:100%;
+    background-color: #fff;    
+    padding:20px;     
+} 
+
+#hebergement-marseille {
+    flex-direction:column;
+    margin:auto;
+    gap:10px;
+    padding:0px;
+}
+
+#heb-marseille h2 {
+    margin:20px 0 20px 0;
+}
+.card {
+    width:100%;
+}
+
+.plus {
+    margin:30px 10px;
+}
+}
 /* HEBERGEMENTS POPULAIRES */
 
 aside {
@@ -385,6 +537,27 @@ aside {
     padding-top:0px;
 }
 
+@media screen and (max-width: 768px)
+{
+aside {
+    width:100%;
+    margin:auto;
+    flex-basis:100%;
+    border-radius:0px;
+    padding:20px;     }
+
+#heb-marseille {
+    width:100%;
+}
+
+#title-aside {
+    padding:0px;
+}
+
+ul.pop {
+    padding:0; 
+}
+}
 /* ACTIVITES */
 
 #activites {
@@ -499,6 +672,80 @@ aside {
     object-position: center;
     border-radius:25px 25px 0 0;
 }
+@media screen and (max-width: 768px)
+{
+#activites {
+    width:90%;
+    margin:auto;
+}
+#activites-marseille {
+    flex-direction: column;
+    justify-content: flex-start;
+    gap:20px;
+    height:100%;
+
+}
+
+.column {
+    width:100%;
+    gap:20px;
+}
+#card1 {
+    width:100%;
+    height:190px;
+}
+
+#card2 {
+    width:100%;
+    height:190px;
+}
+
+#card3 {
+    width:100%;
+    height:190px;
+}
+#card4 {
+    width:100%;
+    height:190px;
+}
+#card5 {
+    width:100%;
+    height:190px;
+}
+#card6 {
+    width:100%;
+    height:190px;
+}
+
+#card1 img {
+    height:130px;
+}
+
+#card1 h3 {
+    height:60px;
+}
+
+#card2 img {
+    height:130px;
+}
+
+#card3 img {
+    height:130px;
+}
+
+#card4 img {
+    height:130px;
+}
+
+#card5 img {
+    height:130px;
+}
+
+#card6 img {
+    height:130px;
+}
+
+}  
 
 /* FOOTER */
 
@@ -533,49 +780,19 @@ footer h3 {
     margin-bottom:20px;
 }
 
+@media screen and (max-width: 768px)
+{
+
+footer {
+    padding:20px 0 20px 20px;
 }
-@media screen and (max-width: 768px) {
-
-header {
-    display:flex;
-    flex-direction:column;
-    flex-wrap: wrap;
-    padding-top:10px;
-}
-
-
-
-#logo {
-    margin:auto;
-    border:1px solid green;
-}
-.logo-booki {
-    width:80px;
+#footer {
+    flex-direction: column;
+    height:100%;
+    gap:20px;
+    padding:0;
 }
 
 
-#menu {
-    display:flex;
-    flex-direction : row;
-    justify-content: space-around;
-    list-style-type: none;
-    border:1px solid red;
-    padding-left:0px;
-}
 
-.liste-menu a {
-    display:block;
-    padding-bottom:20px;
-    position:relative;
-    text-align:center;
-    font-size:16px;
-    color:#6294E0;
-    border:1px solid green;
-}
-
-.liste-menu a:hover {
-    border-bottom:2px solid #6294E0;
-    color:#6294E0;
-
-}
 }
