--- a/css/style.css
+++ b/css/style.css
@@ -53,27 +53,47 @@ header {
 
 /* HEADER */
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap:wrap;
+    padding:0;
+}
 .logo-booki {
-    width:120px;
+    width: 97px;
+    margin: 20px 0;
 }
 
+nav {
+    height:90px;
+}
 #menu {
-    display:flex;
-    gap:60px;
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    margin: 0;
+    height: 100%;
     list-style-type: none;
-    margin-right:50px;
-    margin-top:0px;
+    padding:0;
 }
 
+.liste-menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    margin-top: 0;
 
-.liste-menu a {
-    padding-top:44px;
 }
 
-.liste-menu a:hover {
-    border-top:2px solid var(--hardBlue);
-
+.liste-menu:hover {
+        color:var(--hardBlue);
+        border-top:3px solid var(--hardBlue);
+    
 }
+
 
 @media screen and (max-width: 768px)
 {
@@ -88,6 +108,7 @@ header {
     display:flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap:nowrap;
     width:100%;
     margin-bottom:50px;
 }
@@ -141,7 +162,7 @@ nav {
 
 }
 
-@media screen and (min-width:768px) and (max-width: 992px)
+@media screen and (min-width:769px) and (max-width: 992px)
 {
 main {
     width:100%;
@@ -197,11 +218,10 @@ main {
 
 .filters {
     display:flex;
-    flex-direction: row;
+    flex-wrap:wrap;
     align-items: center;
     gap:20px;
     margin-top:25px;
-    height:50px;
 }
 
 .filter {
@@ -856,18 +876,19 @@ footer {
 
 }
 
-@media screen and (min-width:768px) and (max-width: 992px)
+@media screen and (min-width:769px) and (max-width: 992px)
 {
 
 footer {
     padding:25px;
     justify-content: space-around;
-    gap:150px;
+    gap:120px;
+    height:100%;
 }
 
 #footer {
     justify-content: space-around;
-    gap:150px;
+    gap:80px;
 }
 }
 
